--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@edgestore/react": "^0.5.4",
+    "@edgestore/server": "^0.5.4",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.16.1",
     "@prisma/extension-accelerate": "^2.0.2",
@@ -27,7 +29,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
