--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "lucide-react": "^0.544.0",
     "next": "^15.5.3",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.1",
@@ -41,6 +42,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
